# hyprchrp

./: .gitignore  .mise.toml  CLAUDE.md  README.md  git-upstream-instructions.md  pyproject.toml  requirements.txt
config/systemd/: hyprchrp.service
lib/: main.py
lib/src/: audio_capture.py  audio_manager.py  audio_utils.py  config_manager.py  global_shortcuts.py  logger.py  parakeet_manager.py  stt_backend.py  stt_backend_factory.py  text_injector.py  whisper_manager.py
scripts/: dev-setup.sh  install-omarchy.sh  sync-production.sh  update-deps.sh
