[project]
name = "hyprchrp"
version = "0.1.0"
description = "Hyprchrp: Hyprland speech-to-text with Parakeet v3 + Whisper backends"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "evdev>=1.6.0",
    "pyperclip>=1.8.2",
    "pywhispercpp==1.3.3",
    "requests>=2.25.0",
    "psutil>=5.8.0",
    "rich>=13.0.0",
    "onnxruntime>=1.15.0",
    "onnx-asr>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
